# michigan-bike-maps

./: .gitignore  README.md  build-netlify.sh  components.json  netlify.toml  package-lock.json  package.json  stats.html  svelte.config.js  tsconfig.json  vite.config.netlify.ts  vite.config.ts
gpx-file-processor-wasm/: Cargo.toml  modulize.js
gpx-file-processor-wasm/src/: compress_gpx.rs  geo_tiff.rs  lib.rs  logging.rs  reduce_gpx.rs
gpx-file-processor-wasm/src/gpx_processing/: compress.rs  mod.rs  reduce.rs
netlify/functions/: rebuild-wasm.js
netlify/plugins/wasm-pack-plugin/: README.md  index.js  manifest.yml  package.json
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/: rateLimiter.ts  wasm-loader.ts
src/lib/API/: index.ts  opentopo.ts
src/lib/components/: ConsentBanner.svelte  DataPolicy.svelte  DownloadGpxInstructions.svelte  FullScreenImgWrapper.svelte  Gtag.svelte  LeafletMap.svelte  Map.svelte  MapLibre.svelte  Seo.svelte  WasmLoader.svelte
src/lib/components/Form/: index.svelte  schema.ts
src/lib/components/map/: ThemeSelector.svelte  index.svelte
src/lib/config/: geojson.ts  gpx.ts  instructions.ts  map.ts  seo.ts
src/lib/helpers/: leaflet.ts  map.ts
src/lib/leaflet-edgebuffer/src/: leaflet.edgebuffer.d.ts  leaflet.edgebuffer.js.old  (+1 more)
src/lib/types/: index.d.ts  index.ts  instructions.ts
src/lib/utils/: geojson.ts  geotiff.ts  gpx.ts  index.ts  maptiler.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/upload/: +page.server.ts  +page.svelte  gpx-form.svelte  schema.ts
static/: _redirects
(+12 files in other folders)
