[package]
name = "gpx-file-processor"
version = "0.1.0"
edition = "2024"


[lib] 
crate-type = ["cdylib"]


[dependencies]
flate2 = { version = "1.1.1", default-features = false, features = ["rust_backend"] }
gpx = "0.10.0"
quick-xml = "0.37.5"
serde =  { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

