[package]
name = "gpx-file-processor-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "This wasm application is used to process gpx files ass they pass through a form in the parent sveltekit form. The program filters unnecessary data from the gpx file then compresses it and returns it to the form."


[lib] 
crate-type = ["cdylib"]


[dependencies]
flate2 = { version = "1.1.1", default-features = false, features = ["rust_backend"] }
gpx = "0.10.0"
image = "0.25.6"
js-sys = "0.3.77"
serde =  { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
tiff = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
web-sys = {version = "0.3.77", features = ['console']}
